src/test/ui/issue-47623.stderr
error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/issue-47623.rs:11:5
   |
11 | use self; //~ERROR `self` imports are only allowed within a { } list
   |     ^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0429"
